[tool.poetry]
name = "new folder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instaloader = "^4.14"
bs4 = "^0.0.2"
selenium = "^4.27.1"
playwright = "^1.49.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
